[package]
name = "http-server"
version = "0.1.0"
authors = ["Romain Desarzens <rdesarz.pro@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
http = "0.2.3"
mime = "0.3"
bcrypt = "0.15.1"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytestring = "1.2.0"
actix = "0.13"
actix-web-actors = "4.1"
actix-files = "0.6"
log = "0.4"
env_logger = "0.9"
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
lazy_static = "1.4.0"
